--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,13 @@
 [tool.poetry]
-name = "freshpaper"
-version = "1.2.2"
-description = "Program to automatically set Bing's `Photo of the day` as your Desktop's wallpaper."
-authors = ["Rohit Gupta <rohitgtech+git@gmail.com>"]
+name = "freshpaper_fixed"
+version = "1.2.3"
+description = "Program to automatically set Bing's `Photo of the day`, NASA, NAT_Geo or Unsplash_Random as your Desktop's wallpaper."
+authors = ["Rohit Gupta <rohitgtech+git@gmail.com>", "ybzhao1989@hotmail.com"]
 license = "BSD-3-Clause"
 readme = "README.rst"
-homepage = "https://github.com/guptarohit/freshpaper"
-repository = "https://github.com/guptarohit/freshpaper"
+packages = [{ include = "freshpaper.py" }]
+homepage = "https://github.com/z7z8th/freshpaper"
+repository = "https://github.com/z7z8th/freshpaper"
 keywords = ["wallpaper changer", "wallpaper", "bing", "bing wallpaper", "nasa-apod"]
 
 classifiers = [
@@ -22,7 +23,6 @@ include = [
 
 [tool.poetry.dependencies]
 python = "^3.6"
-pillow = "^7.0"
 click = "*"
 
 [tool.poetry.dev-dependencies]
@@ -31,6 +31,11 @@ black = "^20.8b1"
 [tool.poetry.scripts]
 freshpaper = "freshpaper:main"
 
+[[tool.poetry.source]]
+name = "tsinghua"
+url = "https://pypi.tuna.tsinghua.edu.cn/simple"
+priority = "primary"
+
 [build-system]
-requires = ["poetry>=0.12"]
-build-backend = "poetry.masonry.api"
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
